Update css to stop flickering Error, loading bar, and reset button while refreshing the page.

--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,12 @@ a:hover {
   color:            #000000;
   text-decoration:  none;
 }
+.alert {
+  display:          none;
+}
+.result {
+  display:          none;
+}
+.loading {
+  display:          none;
+}
